--- a/index.html
+++ b/index.html
@@ -1,22 +1,24 @@
 <!DOCTYPE html>
 <html>
     <link href="styles/style.css" rel="stylesheet">
- <div id="box-container">
+
+ <body id="box-container">
      <div id="header">
          <p>header</p>
     </div>
 
-     <div id="search">
-     <h1>test</h1>
-     <img src="images/google-logo.png" alt="Google logo" id="logo">
-     <input type="text" id="search-bar">
-     <button>Google Search</button>
-     <button>I'm Feeling Lucky!</button>
+     <div id="search-container">
+     
+     <img src="images/google-logo.png" alt="Google logo" id="logo"> 
+     
+     <input type="text" id="search-bar"> 
+     <button class="search-button">Google Search</button>
+     <button class="search-button">I'm Feeling Lucky</button>
      </div>
 
      <div id="footer">
          <p>footer</p>
      </div>
 
- </div>   
+    </body>   
 </html>
